arreglos para desplegar

--- a/src/pages/gestion.astro
+++ b/src/pages/gestion.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import { db, Procesador_Intel } from 'astro:db';
 import Layout from "@/layouts/Layout.astro";
 
@@ -26,4 +26,4 @@ console.log(componentes.procesadores)
       <article>{cpu[1].brand}</article>
     )
   })}
-</Layout>
+</Layout> -->
